# learn-agent-harness

./: .env.example  .gitignore  README.md  goals.json  pyproject.toml
.agent/: security.md
docs/: nanobot-security-comparison.md  step-01-project-skeleton.md  step-02-config-module.md  step-03-tools-package.md  step-04-agent-loop.md  step-05-cli-and-readme.md  step-06-permission-system.md  step-07-security-hardening.md  step-08-hooks-system.md  step-09-todo-write.md  step-10-nanobot-goals.md  step-11-subagent.md  step-12-skill-loading.md  testing-guide.md
src/learn_cc/: __init__.py  __main__.py  agent.py  config.py  hooks.py  permission.py  skills_loader.py  subagent.py  todo.py
src/learn_cc/skills/testing/: SKILL.md
src/learn_cc/tools/: __init__.py  base.py  bash.py  file_ops.py  planning.py  registry.py  search.py
tests/: test_agent.py  test_config.py  test_hooks.py  test_permission.py  test_skills_loader.py  test_subagent.py  test_todo.py
tests/test_tools/: test_base.py  test_bash.py  test_file_ops.py  test_registry.py  test_search.py
tmp/: __init__.py  string_tools.py  utils.py
tmp/tests/: test_utils.py
