[project]
name = "learn-cc"
version = "0.1.0"
description = "从零学习 Claude Code 核心机制 —— 教学项目 learn-claude-code 的模块化重构版"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "csm797" },
]

dependencies = [
    "anthropic>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
learn-cc = "learn_cc.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/learn_cc"]

[tool.hatch.build.targets.wheel.sources]
"src" = "."

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
